fix problem with mappers